# snapshottest

./: README.md  TUTORIAL.md  __azurite_db_table__.json  demo.sh  pyproject.toml
demo/continent/: location.py  models.py
src/snapshottest/: __init__.py  cli.py  location.py  models.py  weather.py
tests/: conftest.py  test_demo.py  test_weather_report.py
